src/main/kotlin/com/example/ohsiria/global/config/error/exception/PermissionDeniedException.kt
package com.example.ohsiria.global.config.error.exception

import com.example.ohsiria.global.config.error.data.ErrorCode

object PermissionDeniedException: BusinessException(ErrorCode.PERMISSION_DENIED)
